--- a/index.html
+++ b/index.html
@@ -1,170 +1,201 @@
 <html>
+  <head>
+    <title>Duc Pham - Software Developer</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" media="all" href="./stylesheets/index.css" />
+  </head>
 
-<head>
-  <title>Duc Pham - Software Developer</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" media="all" href="/stylesheets/index.css">
-</head>
+  <body class="body--preview">
+    <div class="preview-box">
+      <div class="container">
+        <div class="title">
+          <div class="title__name" style="width: auto">Duc Pham</div>
+          <div class="title__position">Software Developer</div>
+        </div>
+        <div class="container__main">
+          <div class="sidebar">
+            <div class="sidebar__section">
+              <div class="section__title">INFO</div>
+              <div class="section__title-separator"></div>
+              <div class="sidebar__subsection">
+                <div class="sidebar__contacts-block">
+                  <div class="sidebar__contact">Phone</div>
+                  <div class="sidebar__contact-value">0795375277</div>
+                </div>
+                <div class="sidebar__contacts-block">
+                  <div class="sidebar__contact">Email</div>
+                  <div class="sidebar__contact-value">
+                    duc.pham0112@gmail.com
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="sidebar__section">
+              <div class="section__title">Education</div>
+              <div class="section__title-separator"></div>
+              <div class="sidebar__subsection">
+                <div class="sidebar__contacts-block">
+                  <div class="sidebar__contact">University Of Science</div>
+                  <!-- <div class="sidebar__contact" style="font-style: italic">
+                    Bachelor of Science
+                  </div> -->
 
-<body class="body--preview">
-  <div class="preview-box">
-    <div class="container">
-      <div class="title">
-        <div class="title__name" style="width: auto;">Duc Pham</div>
-        <div class="title__position">Software Developer</div>
-      </div>
-      <div class="container__main">
-        <div class="sidebar">
-          <div class="sidebar__section">
-            <div class="section__title">INFO</div>
-            <div class="section__title-separator"></div>
-            <div class="sidebar__subsection">
-              <div class="sidebar__contacts-block">
-                <div class="sidebar__contact">Phone</div>
-                <div class="sidebar__contact-value">0795375277</div>
-              </div>
-              <div class="sidebar__contacts-block">
-                <div class="sidebar__contact">Email</div>
-                <div class="sidebar__contact-value">duc.pham0112@gmail.com</div>
+                  <div class="sidebar__contact-value">
+                    Advance Program in Computer Science (APCS)
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="sidebar__section">
-            <div class="section__title">SKILLS</div>
-            <div class="section__title-separator"></div>
-            <div class="sidebar__skill">
-              <div class="sidebar__skill-label">NodeJS</div>
-              <div class="progress">
-                <div class="progress-background"></div>
-                <div class="progress-inner" style="width: 100%;"></div>
+          <div class="main">
+            <div class="main__section">
+              <div class="section__title">Profile</div>
+              <div class="section__title-separator"></div>
+              <div class="main__text">
+                <p>
+                  Pasionate full-stack Software Developer with more than 5 years
+                  of experience building web applications as well as IoT
+                  solutions.
+                </p>
               </div>
             </div>
-            <div class="sidebar__skill">
-              <div class="sidebar__skill-label">IoT (Raspberry Pi)</div>
-              <div class="progress">
-                <div class="progress-background"></div>
-                <div class="progress-inner" style="width: 100%;"></div>
-              </div>
-            </div>
-            <div class="sidebar__skill">
-              <div class="sidebar__skill-label">ReactJS</div>
-              <div class="progress">
-                <div class="progress-background"></div>
-                <div class="progress-inner" style="width: 90%;"></div>
-              </div>
-            </div>
-            <div class="sidebar__skill">
-              <div class="sidebar__skill-label">AngularJS</div>
-              <div class="progress">
-                <div class="progress-background"></div>
-                <div class="progress-inner" style="width: 70%;"></div>
-              </div>
-            </div>
-            <div class="sidebar__skill">
-              <div class="sidebar__skill-label">PostgreSQL</div>
-              <div class="progress">
-                <div class="progress-background"></div>
-                <div class="progress-inner" style="width: 70%;"></div>
-              </div>
-            </div>
-            <div class="sidebar__skill">
-              <div class="sidebar__skill-label">MongoDB</div>
-              <div class="progress">
-                <div class="progress-background"></div>
-                <div class="progress-inner" style="width: 70%;"></div>
-              </div>
-            </div>
-            <div class="sidebar__skill">
-              <div class="sidebar__skill-label">Ruby on Rails</div>
-              <div class="progress">
-                <div class="progress-background"></div>
-                <div class="progress-inner" style="width: 50%;"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="main">
-          <div class="main__section">
-            <div class="section__title">Profile</div>
-            <div class="section__title-separator"></div>
-            <div class="main__text">
-              <p>Pasionate full-stack Software Developer with more than 5 years of experience building web applications as well as IoT solutions.</p>
-            </div>
-          </div>
-          <div class="main__section">
-            <div class="section__title">Employment History</div>
-            <div class="section__title-separator"></div>
-            <div
-              class="main__content">
-              <div class="main__content-item" style="page-break-inside: auto;">
-                <div class="main__content-header">
-                  <div class="main__content-title">Lead Developer, East Agile</div>
-                  <div class="main__content-location"></div>
+            <div class="main__section">
+              <div class="section__title">Employment History</div>
+              <div class="section__title-separator"></div>
+              <div class="main__content">
+                <div class="main__content-item" style="page-break-inside: auto">
+                  <div class="main__content-header">
+                    <div class="main__content-title">
+                      Senior Developer, Lazada Techub VN
+                    </div>
+                    <div class="main__content-location"></div>
+                  </div>
+                  <div class="main__content-subtitle">
+                    <div class="main__content-date">Oct 2020 – Present</div>
+                  </div>
+                  <div class="main__content-caption">
+                    <!-- <p>
+                      East Agile is one of the best outsourcing firm in Ho Chi
+                      Minh City. Client clients mostly are entrepreneurs in the
+                      US.
+                    </p> -->
+                    <ul>
+                      <li>
+                        Worked closely with Product Development and Design teams
+                        to review PRDs, understand domain business logic, and
+                        contribute ideas for improving UI/UX and overall product
+                        functionality.
+                      </li>
+                      <li>
+                        Estimated timelines and ensured on-time project
+                        delivery. In a horizontal team structure supporting
+                        multiple vertical project teams, coordinated resources
+                        to manage multiple projects simultaneously, ensuring
+                        efficient team performance.
+                      </li>
+                      <li>
+                        Took responsibility for the quality of features and code
+                        in assigned applications, domains, and products. Managed
+                        GOC tickets, campaigns, and other BAU tasks, providing
+                        hypercare support post-launch.
+                      </li>
+                      <li>
+                        Implemented and maintained a custom micro front-end
+                        framework to enable modular delivery of front-end
+                        applications, enhancing scalability and maintainability.
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-                <div class="main__content-subtitle">
-                  <div class="main__content-date">Oct 2015 – Present</div>
+                <div class="main__content-item" style="page-break-inside: auto">
+                  <div class="main__content-header">
+                    <div class="main__content-title">
+                      Senior/Lead Developer, East Agile
+                    </div>
+                    <div class="main__content-location"></div>
+                  </div>
+                  <div class="main__content-subtitle">
+                    <div class="main__content-date">Oct 2015 – Oct 2020</div>
+                  </div>
+                  <div class="main__content-caption">
+                    <ul>
+                      <li>
+                        Developed and tested modules based on functional
+                        specifications. Set up and configured servers, managed
+                        routing, and implemented CI/CD pipelines for seamless
+                        deployment.
+                      </li>
+                      <li>
+                        Led the architecture and development of a scalable IoT
+                        platform with multple web applications and microservices
+                        running on Raspberry Pis.
+                      </li>
+                      <li>
+                        Worked closely with clients to evaluate requirements,
+                        plan development strategies, and provide workload
+                        estimations.
+                      </li>
+                      <li>
+                        Mentored team members in Agile practices (TDD, pair
+                        programming) and proposed process improvements to
+                        enhance team efficiency.
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-                <div class="main__content-caption">
-                  <p>East Agile is one of the best outsourcing firm in Ho Chi Minh City. Client clients mostly are entrepreneurs in the US.</p>
-                  <p><strong>Archivements:</strong></p>
-                  <ul>
-                    <li>Lead the architecture and development of one complex scalable IoT platform, with 3 web apps (AngularJS and ReactJS) along side with multiple microservices running in Raspberry Pis</li>
-                    <li>Worked closely with clients for development planing, by evaluating requirements, workload and estimations.</li>
-                    <li>Developed, tested each module according to the functional specifications and technical design.</li>
-                    <li>Mentored, proposed and shared Agile practices (TDD, pair programing...), also leverage best practices and develop improvement to processes wherever possible</li>
-                  </ul>
+                <div
+                  class="main__content-item"
+                  style="page-break-inside: avoid"
+                >
+                  <div class="main__content-header">
+                    <div class="main__content-title">
+                      Software Developer (Freelance), Codelink
+                    </div>
+                  </div>
+                  <div class="main__content-subtitle">
+                    <div class="main__content-date">Jun 2017 – Oct 2019</div>
+                  </div>
+                  <div class="main__content-caption">
+                    <ul>
+                      <li>
+                        Translated UX wireframes and mockups from the design
+                        team into responsive and interactive features
+                      </li>
+                      <li>
+                        Fixed bugs and implemented enhancements on existing
+                        websites, significantly improving functionality and
+                        speed.
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-              <div class="main__content-item" style="page-break-inside: avoid;">
-                <div class="main__content-header">
-                  <div class="main__content-title">Software Developer (Freelance), Codelink</div>
+                <div
+                  class="main__content-item"
+                  style="page-break-inside: avoid"
+                >
+                  <div class="main__content-header">
+                    <div class="main__content-title">
+                      Fresher/Junior Developer, CSC Vietnam
+                    </div>
+                    <div class="main__content-location"></div>
+                  </div>
+                  <div class="main__content-subtitle">
+                    <div class="main__content-date">Jul 2014 – Oct 2015</div>
+                  </div>
+                  <div class="main__content-caption">
+                    <p>
+                      Developed applications across various platforms, including
+                      native iOS (Objective-C), cross-platform (Cordova, Ionic),
+                      and web-based applications, according to project
+                      requirements.
+                    </p>
+                  </div>
                 </div>
-                <div class="main__content-subtitle">
-                  <div class="main__content-date">Jun 2017 – Oct 2019</div>
-                </div>
-                <div class="main__content-caption">
-                  <ul>
-                    <li>Translated design team’s UX wireframes and mockups into responsive, interactive features using Ruby On Rails and ReactJS/Jquery</li>
-                    <li>Fixed bugs from existing websites and implemented enhancements that significantly improved web functionality and speed.</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="main__content-item" style="page-break-inside: avoid;">
-                <div class="main__content-header">
-                  <div class="main__content-title">Software Developer, CSC Vietnam</div>
-                  <div class="main__content-location"></div>
-                </div>
-                <div class="main__content-subtitle">
-                  <div class="main__content-date">Jul 2014 – Oct 2015</div>
-                </div>
-                <div class="main__content-caption">
-                  <p>Developing applications in multiple platforms (native iOS (objective-C), cross-platform (cordova, ionic...), web-based applications) as per the requirements.</p>
-                </div>
-              </div>
-          </div>
-        </div>
-        <div class="main__section">
-          <div class="section__title">Education</div>
-          <div class="section__title-separator"></div>
-          <div class="main__content">
-            <div class="main__content-item" style="page-break-inside: avoid;">
-              <div class="main__content-header">
-                <div class="main__content-title">University Of Science, Bachelor of Science in Computer Science</div>
-                <div class="main__content-location"></div>
-              </div>
-              <div class="main__content-subtitle">
-                <div class="main__content-date">Aug 2010 – Aug 2013</div>
-              </div>
-              <div class="main__content-caption">
-                <p>Advance Program in Computer Science (APCS)</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  </div>
-</body>
-
+  </body>
 </html>
