--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
                     Bachelor of Science
                   </div> -->
 
+                  <div
+                    class="sidebar__contact-value"
+                    style="margin-bottom: 4px; font-style: italic"
+                  >
+                    Bachelor of Science
+                  </div>
                   <div class="sidebar__contact-value">
-                    Advance Program in Computer Science (APCS)
+                    Advance Program in Computer Science (APCS) Program
                   </div>
                 </div>
               </div>
@@ -53,9 +59,12 @@
               <div class="section__title-separator"></div>
               <div class="main__text">
                 <p>
-                  Pasionate full-stack Software Developer with more than 5 years
-                  of experience building web applications as well as IoT
-                  solutions.
+                  Experienced Lead/Senior Developer specializing in web
+                  applications. Proficient in Node.js and ReactJS for web
+                  development. Strong background in Agile methodologies, DevOps
+                  practices, and implementing micro front-end frameworks. Proven
+                  ability to enhance UI/UX, manage multiple projects, and
+                  deliver high-quality, scalable solutions.
                 </p>
               </div>
             </div>
@@ -71,7 +80,7 @@
                     <div class="main__content-location"></div>
                   </div>
                   <div class="main__content-subtitle">
-                    <div class="main__content-date">Oct 2020 – Present</div>
+                    <div class="main__content-date">Oct 2020 - Present</div>
                   </div>
                   <div class="main__content-caption">
                     <!-- <p>
@@ -106,6 +115,10 @@
                       </li>
                     </ul>
                   </div>
+                  <div class="main__content-caption">
+                    <strong>Technical skill:</strong>&nbsp;ReactJS, NodeJS,
+                    AntDesign
+                  </div>
                 </div>
                 <div class="main__content-item" style="page-break-inside: auto">
                   <div class="main__content-header">
@@ -115,7 +128,7 @@
                     <div class="main__content-location"></div>
                   </div>
                   <div class="main__content-subtitle">
-                    <div class="main__content-date">Oct 2015 – Oct 2020</div>
+                    <div class="main__content-date">Oct 2015 - Oct 2020</div>
                   </div>
                   <div class="main__content-caption">
                     <ul>
@@ -142,6 +155,10 @@
                       </li>
                     </ul>
                   </div>
+                  <div class="main__content-caption">
+                    <strong>Technical skill:</strong>&nbsp;ReactJS, NodeJS,
+                    Azure, AWS, AngularJS
+                  </div>
                 </div>
                 <div
                   class="main__content-item"
@@ -153,7 +170,7 @@
                     </div>
                   </div>
                   <div class="main__content-subtitle">
-                    <div class="main__content-date">Jun 2017 – Oct 2019</div>
+                    <div class="main__content-date">Jun 2017 - Oct 2019</div>
                   </div>
                   <div class="main__content-caption">
                     <ul>
@@ -168,6 +185,10 @@
                       </li>
                     </ul>
                   </div>
+                  <div class="main__content-caption">
+                    <strong>Technical skill:</strong>&nbsp;Ruby On Rails,
+                    ReactJS, Jquery
+                  </div>
                 </div>
                 <div
                   class="main__content-item"
@@ -180,7 +201,7 @@
                     <div class="main__content-location"></div>
                   </div>
                   <div class="main__content-subtitle">
-                    <div class="main__content-date">Jul 2014 – Oct 2015</div>
+                    <div class="main__content-date">Jul 2014 - Oct 2015</div>
                   </div>
                   <div class="main__content-caption">
                     <p>
